--- a/Case_Predictions.ipynb
+++ b/Case_Predictions.ipynb
@@ -286,12 +286,13 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "country = ['Brasil', 'Índia', 'Itália', 'EUA'] #Lista de países\n",
     "\n",
     "#Grid Search\n",
-    "T_A = [0.01, 0.05, 0.1, 0.2] #0.01, 0.02, 0,03, 0.06, 0.1, 0.2; \n",
-    "DROP = [0.01, 0.05, 0.1, 0.2]   #0.05, 0.1, 0.15, 0.2, 0.3, 0.5;\n",
-    "N_C = [200, 300, 400, 600]    #50, 100, 200, 300, 400, 600;\n",
+    "T_A = [0.01, 0.05, 0.1, 0.2] #Taxa de aprendizagem \n",
+    "DROP = [0.01, 0.05, 0.1, 0.2]   #Dropout\n",
+    "N_C = [200, 300, 400, 600]    #Número de células\n",
     "NPC = [8, 16, 32, 64] #Neurônios por camada\n",
     "\n",
     "#Relizando grade de experimentos\n",
@@ -2953,8 +2954,7 @@
     "    history = [x for x in train]\n",
     "    # walk-forward validation\n",
     "    for t in range(len(train)):\n",
-    "        #model = ARIMA(history, order=(p[country[i]],d[country[i]],q[country[i]]))\n",
-    "        model = ARIMA(history, order=(1,0,1))\n",
+    "        model = ARIMA(history, order=(p[country[i]],d[country[i]],q[country[i]]))\n",
     "        model_fit = model.fit()\n",
     "        output = model_fit.forecast()\n",
     "        yhat = output[0]\n",
@@ -2964,8 +2964,7 @@
     "        #print('predicted=%f, expected=%f' % (yhat, obs))\n",
     "        # evaluate forecasts\n",
     "    for t in range(len(test)):\n",
-    "        #model = ARIMA(history, order=(p[country[i]],d[country[i]],q[country[i]]))\n",
-    "        model = ARIMA(history, order=(1,0,1))\n",
+    "        model = ARIMA(history, order=(p[country[i]],d[country[i]],q[country[i]]))\n",
     "        model_fit = model.fit()\n",
     "        output = model_fit.forecast()\n",
     "        yhat = output[0]\n",
